src/main/css/header.css
.header, .fixedHeader {
    background-color: #282E36;
    height: 50px;
    line-height: 50px;
    width: 100%;
    text-align: left;
    margin: 0, 0, 10px, 10px;
    padding-left: 15px;
    font-family: 'Open Sans', sans-serif;
    color: white;
    display:inline-flex;
}

.fixedHeader {
    position: fixed;
    z-index: 9999;
}

.submitButtons {
    margin-right: 10px;
	color: #fff;
    background: #285f8f;
    text-align: center;
    padding: 5px 10px 5px 10px;
    font-size: 1em;
    display: inline-block;
    height: 30px;
    line-height: normal;
}

.submitContainers {
	padding-right: 10px;
    display: inline-block;
    margin: 5px;
    text-align: right;
    float: right;
}

.title {
    margin-left: auto;
    margin-right: auto;
    font-size: 24px;
    font-style: bold;
    text-align: center;
}

.loginSpacer {
    min-width: 150px;
}

.blackduckLogo {
    margin-top: 4px;
}

